v1.0.0 – Initial Release (2025-08-27)

    Added homepage (index.html)

    Created, "About Us","Contact", "Gallery" and "Services" pages

    Added navigation bar and footer

    

v1.1.0 – Latest Update (2025-09-26)
    Added css for decoration, layout, and typography

    Improved mobile responsiveness

    Integrated Font Awesome icons

    Added responsive CSS styling




## Changelog
v1.0.0 – Initial Release (2025-08-27)

    Added homepage (index.html)

    Created, "About Us","Contact", "Gallery" and "Services" pages

    Added navigation bar and footer

    
v1.1.0 – Latest Update (2025-09-26)
    Added css for decoration, layout, and typography

    Improved mobile responsiveness

    Integrated Font Awesome icons

    Added responsive CSS styling


SEE WEBSITE RESPOSIVE DESIGN SNIPPETS:
![alt text](<../../asserts/website on a big screen.png>)
![alt text](<../../asserts/website on a desktop.png>)
![alt text](<../../asserts/image on the small screen.png>)
![alt text](<../../asserts/image for small screen.png>)

## Improvements based on part 2 feedback
No improvements were recommended

## Part 3 Changelog
Added a few pictures in the 'gallery page'
Added a timestamp in the footer sections for all the pages for a good user experience
Added a  realtime date stamp  in the header section of the home page
Added a gallery lightbox  for the images in the gallery page to improve the experience if the users.
Created an enquiry page as well as the enquiry form
Added javascript form validation rules for the user input
Applied a css layout on the enquiry form
Added a feedback functionality for submission of the form
Customized the layoutof the dynamic contentin the css file
 


REFERENCES
    W3Schools. (2025, September 12). W3Schools. Retrieved from W3Schools: https://www.w3schools.com/cssref/pr_class_cursor.php

    Schools, W. (2025, September 16). W3 SCHOOLS. Retrieved from W3 SCHOOLS: https://www.w3schools.com/howto/howto_js_mobile_navbar.aspMichellesBoutique  