@@ -22,6 +22,7 @@
             <a href="./Gallery.html">Gallery</a>
             <a href="./Contact.html">Contact Us</a>
             <a href="./About.html">About Us</a>
+            <a href="./enquiry.html">Enquiry Form</a>
            
         </nav>
         <!--Add a hamburger navigation  for small devices-->
