@@ -60,6 +60,7 @@ Added javascript form validation rules for the user input
 Applied a css layout on the enquiry form
 Added a feedback functionality for submission of the form
 Customized the layoutof the dynamic contentin the css file
+Implemented javascript interactive accordion buttons on the "service" page for the (Our services, Nails section, nails services,Eye lashes section, lashes services,Maintenance and why choose us) content.
  
 
 
